--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fitkidz",
+  "name": "airobreath",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -40,7 +40,6 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
-    "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "genkit": "^1.14.1",
     "lucide-react": "^0.475.0",
@@ -50,7 +49,6 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
-    "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
